[package]
name = "fibers_http_server"
version = "0.1.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]

[dependencies]
bytecodec = "0.2"
factory = "0.1"
fibers = "0.1"
futures = "0.1"
httpcodec = "0.1"
prometrics = "0.1"
slog = {version = "2", features = ["release_max_level_debug"]}
trackable = "0.2"
url = "1"

[dev-dependencies]
sloggers = "0.2"
