[package]
name = "fibers_http_server"
version = "0.1.10"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A tiny HTTP/1.1 server framework"
homepage = "https://github.com/sile/fibers_http_server"
repository = "https://github.com/sile/fibers_http_server"
readme = "README.md"
keywords = ["http"]
categories = ["web-programming::http-server"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = {repository = "sile/fibers_http_server"}
codecov = {repository = "sile/fibers_http_server"}

[dependencies]
atomic_immut = "0.1"
bytecodec = "0.4"
factory = "0.1"
fibers = "0.1"
futures = "0.1"
httpcodec = "0.2"
prometrics = "0.1"
slog = "2"
trackable = "0.2"
url = "1"

[dev-dependencies]
fibers_global = "0.1"
sloggers = "0.3"
